# RAG-CHATBOT-WITH-ROLE-BASED-ACCESS-CONTROL

./: .gitignore  app.py  chroma_db_b64.txt  docker-compose.yml  guardrails.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
backend/: Dockerfile  build_db.py  cost_tracker.py  guardrails.py  main.py  requirements.txt
frontend/: app.py  requirements.txt
tests/: requirements.txt  test_evals.py
