[project]
name = "atliq-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataclasses>=0.8",
    "fastapi>=0.135.3",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "markdown>=3.10.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.0",
    "streamlit>=1.56.0",
    "unstructured>=0.22.18",
    "uvicorn>=0.44.0",
]
